<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ReminderActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="@color/dd"
            android:layout_margin="4dp">

            <TextView
                android:id="@+id/tvSD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/start_date"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tvShowStartDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Subject"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:layout_weight="1"
                android:maxLines="1"
                android:maxLength="20"
                android:layout_toStartOf="@id/tvSD"
                android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="@color/dd"
                android:layout_margin="4dp">

                <TextView
                    android:id="@+id/tvST"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/start_time"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tvShowStartTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Subject"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:layout_toStartOf="@id/tvST"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="@color/dd"
                android:layout_margin="4dp">

                <TextView
                    android:id="@+id/tvFD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/finish_date"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tvShowFinishDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Subject"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:layout_toStartOf="@id/tvFD"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="@color/dd"
                android:layout_margin="4dp">

                <TextView
                    android:id="@+id/tvFT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/finish_time"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tvShowFinishTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Subject"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:layout_toStartOf="@id/tvFT"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="@color/dd"
                android:layout_margin="4dp">

                <TextView
                    android:id="@+id/tvAD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/alarm_date"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tvShowAlarmDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Subject"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:layout_toStartOf="@id/tvAD"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="@color/dd"
                android:layout_margin="4dp">

                <TextView
                    android:id="@+id/tvAT"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/alarm_time"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tvShowAlarmTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Subject"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:layout_toStartOf="@id/tvAT"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="@color/dd"
                android:layout_margin="4dp">

                <TextView
                    android:id="@+id/tvS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/subject"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tvShowSubject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Subject"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:layout_toStartOf="@id/tvS"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="@color/dd"
                android:layout_margin="4dp">

                <TextView
                    android:id="@+id/tvC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/context"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tvShowContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Subject"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:layout_toStartOf="@id/tvC"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="@color/dd"
                android:layout_margin="4dp">

                <TextView
                    android:id="@+id/tvMS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/mail_status"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tvShowMailStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Subject"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:layout_toStartOf="@id/tvMS"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="@color/dd"
                android:layout_margin="4dp">

                <TextView
                    android:id="@+id/tvMSu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/mail_subject"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tvShowMailSubject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Subject"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:layout_toStartOf="@id/tvMSu"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="@color/dd"
                android:layout_margin="4dp">

                <TextView
                    android:id="@+id/tvMC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/mail_context"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/tvShowMailContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Subject"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:maxLength="20"
                    android:layout_toStartOf="@id/tvMC"
                    android:layout_alignParentEnd="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/bBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/back"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:background="@color/button"
                    android:textColor="@color/button_text"/>
                <Button
                    android:id="@+id/bUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_toStartOf="@id/bBack"
                    android:layout_alignParentEnd="true"
                    android:background="@color/button"
                    android:textColor="@color/button_text"/>

            </RelativeLayout>
    </LinearLayout>
</ScrollView>